--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- notes -->
   <div class="notes container grey-text text-darken-1">
     <div class="card-panel note white row">
-      <img src="/img/logo.png" alt="note thumb" style="width: 50px;">
+      <img src="../img/logo.png" alt="note thumb" style="width: 50px;">
       <div class="note-details">
         <div class="note-title">Sati notes</div>
         <div class="note-details">In sati if husband dies the widow is burnt alive with the husband.</div>
@@ -57,7 +57,7 @@
       </div>
     </div>
     <div class="card-panel note white row">
-      <img src="/img/logo.png" alt="note thumb" style="width: 50px;">
+      <img src="../img/logo.png" alt="note thumb" style="width: 50px;">
       <div class="note-details">
         <div class="note-title">Sati notes</div>
         <div class="note-details">In sati if husband dies the widow is burnt alive with the husband.</div>
